Add (temporary?) icon
Signed-off-by: Max Steenbergen <max.steenbergen@imtechmarine.com>

--- a/css/screen.css
+++ b/css/screen.css
@@ -8,10 +8,22 @@ body{
   text-align: center;
 }
 
+#header{
+  margin: 0 auto;
+  width: 310px;
+}
+#fibonacci_icon{
+  width: 80px;
+  float: left;
+  margin-right: 10px;
+  position: relative;
+  top: -5px;
+}
+
 h1, h2, span{
   font-family: Avenir;
   color: hsla(200,100%,90%,1);
-  text-align: center;
+  text-align: left;
   font-size: 2.5em;
   margin-top: 50px;
 }
@@ -57,7 +69,8 @@ span{
 
 #splitControls img{
   margin: 15px 5px;
-  opacity: 0.7
+  opacity: 0.7;
+  cursor: pointer;
 }
 
 #optionsModal{
@@ -71,6 +84,10 @@ span{
   border-radius: 10px;
   background-color: hsla(100, 100%, 100%, 0.5);
   margin: 15px
+}
+
+#optionsModal img{
+  cursor: pointer;
 }
 
 ::-webkit-input-placeholder { color:hsla(200,100%,90%,1); }
@@ -108,6 +125,8 @@ input:-moz-placeholder { color:hsla(200,100%,90%,1); }
   -webkit-appearance: none;
   appearance: none;
   border: none;
+  outline: none;
+  cursor: pointer;
   box-shadow: 0 0 0 1px hsla(100,100%,100%,0.2) inset, 0 0 0 1px hsla(200,100%,0%,0.1);
   border-radius: 5px;
   background-image: -o-linear-gradient(0deg, #1A658D 0%, #6CBFDA 100%);
