--- a/css/screen.css
+++ b/css/screen.css
@@ -11,13 +11,11 @@ body{
 #header{
   margin: 0 auto;
   width: 310px;
-}
-#fibonacci_icon{
-  width: 80px;
-  float: left;
-  margin-right: 10px;
-  position: relative;
-  top: -5px;
+  height: 80px;
+  background-image: url( '../img/fibonacci_icon.png' );
+  background-repeat: no-repeat;
+  background-position: center left;
+  background-size: contain;
 }
 
 h1, h2, span{
@@ -26,13 +24,16 @@ h1, h2, span{
   text-align: left;
   font-size: 2.5em;
   margin-top: 50px;
+  padding-left: 90px;
+  padding-top: 10px
 }
 h2{
   font-size: 1.6em;
   font-weight: normal;
-  margin-top: 0px;
+  margin-top: -10px
 }
 span{
+  padding: 0;
   font-size: 1em;
   margin: 13px;
 }
