--- a/css/screen.css
+++ b/css/screen.css
@@ -39,12 +39,12 @@ span{
 }
 
 #codeExportTextarea, #container{
-  width: 800px;
+  width: 100%;
   height: 600px;
   position: absolute;
-  left: 50%;
-  margin-left: -400px;
-  top: 150px;
+  //left: 50%;
+  //margin-left: -400px;
+  top: 180px;
 }
 
 #codeExportTextarea{
