--- a/css/fibonacci.css
+++ b/css/fibonacci.css
@@ -1,13 +1,15 @@
+#flexcanvas{
+  width: 100%;
+  height: 600px !important;
+}
+
 .rowParent, .columnParent{
   display: -webkit-box;
-  display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
   -webkit-box-direction: normal;
-  -moz-box-direction: normal;
   -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
@@ -15,7 +17,6 @@
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
   -webkit-box-pack: start;
-  -moz-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
@@ -23,7 +24,6 @@
   -ms-flex-line-pack: stretch;
   align-content: stretch;
   -webkit-box-align: stretch;
-  -moz-box-align: stretch;
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
@@ -31,7 +31,6 @@
 
 .columnParent{
   -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -39,7 +38,6 @@
 
 .flexChild{
   -webkit-box-flex: 1;
-  -moz-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
